crates/macros/context-derive/tests/ui/unit_struct.stderr
error: Context Extensions traits cannot be derived for unit structs
 --> tests/ui/unit_struct.rs:4:8
  |
4 | struct MyContext;
  |        ^^^^^^^^^
