crates/macros/context-derive/tests/ui/unit_struct.rs
use gadget_context_derive::KeystoreContext;

#[derive(KeystoreContext)]
struct MyContext;

fn main() {}
